# instagram-server-django

./: db.sqlite3  pyproject.toml
common/: models.py
config/: authentication.py  settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_feed_user.py  0002_initial.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0002_review_feed_review_user.py  0003_rename_caption_review_rcaption.py  0003_review_feed.py  0004_alter_review_content.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_remove_user_nickname.py  0003_alter_user_password.py
